src/test/deca/syntax/invalid/our_synt_tests/robin-test3-noObrac.deca
// Error: code missing "{" at the beginning.


    println("I'm missing the {");
}
